--- a/.gitattributes
+++ b/.gitattributes
@@ -75,6 +75,13 @@ background-color: rgb(128, 248, 128);}
 <div style="left: 520px; top: 550px; position: absolute; font-size: 14px; font-family: sans-serif; font-weight: 200">
 <label><a href="forgotten account">forgotten account?</a></label></div>
 
+</div>
+<div class=""></div>
+<div style="left: 680px; top: 550px; position: absolute; font-size: 14px; font-family: sans-serif; font-weight: 200">
+<label><a href="#">signup for facebook</a></label></div>
+
+
+
 
 
 
