--- a/.gitattributes
+++ b/.gitattributes
@@ -36,7 +36,7 @@ border-radius: 5px;
 	<table><form>
 		<div class="box">
 
-		<div style="background-color: rgb(255, 250, 250); padding: 10px; box-shadow: 10px 15px 18px rgb(190, 188, 188); border: 0px solid black;
+		<div style="background-color:  rgb(250, 254, 255)); padding: 10px; box-shadow: 10px 15px 18px rgb(190, 188, 188); border: 0px solid black;
 		width: 380px;height: 280px;
 		 border-radius: 5px; left: 460px; top: 140px; position: absolute; color:#3531FA;"></div>
 		
