--- a/.gitattributes
+++ b/.gitattributes
@@ -7,8 +7,8 @@
 	button{padding-left: 170px;
 		 padding-right: 170px;
 		 
-	 padding-top: 13px;
-	 padding-bottom: 13px;
+	 padding-top: 15px;
+	 padding-bottom: 15px;
 	 color: white;
 	 background-color: blue; 
 	 border-radius: 5px;
@@ -16,9 +16,10 @@
 	input{padding-left: 98px;
 	padding-right: 98px;
 	
-padding-top: 13px;
-padding-bottom: 13px;
+padding-top: 15px;
+padding-bottom: 15px;
 border-radius: 5px;
+border-color:white;
 
 }
 
@@ -31,13 +32,13 @@ border-radius: 5px;
 <body>
 	
 
-	<div style="width: 360px; height: 64px; left: 550px; top: 80px; position: absolute; color: #3531FA; font-size: 50px; font-family: sans-serif; font-weight: 100; font-style: inherit; word-wrap: break-word"><b>facebook</b></div>
+	<div style="width: 360px; height: 64px; left: 550px; top: 70px; position: absolute; color: #3531FA; font-size: 50px; font-family: sans-serif; font-weight: 100; font-style: inherit; word-wrap: break-word"><b>facebook</b></div>
 	
 	<table><form>
 		<div class="box">
 
-		<div style="background-color:  rgb(250, 254, 255)); padding: 10px; box-shadow: 10px 15px 18px rgb(190, 188, 188); border: 0px solid black;
-		width: 380px;height: 280px;
+		<div style="background-color: rgb(250, 254, 255); padding: 10px; box-shadow: 10px 15px 18px rgb(190, 188, 188); border: 0px solid black;
+		width: 380px;height: 300px;
 		 border-radius: 5px; left: 460px; top: 140px; position: absolute; color:#3531FA;"></div>
 		
 			
@@ -52,7 +53,7 @@ border-radius: 5px;
 
 
 	<div class="input-field">
-	<div style="left: 480px; top: 200px; position: absolute; color: rgb(165, 159, 159);" ><input type="email or phone number" class="input"
+	<div style="left: 480px; top: 200px; position: absolute;" ><input type="email or phone number" class="input"
 		placeholder="email or phone number" ></input></div>
 
 	
